# CppLogModule

./: .gitignore
LogModule/: CMakeLists.txt  CMakeLists.txt.user.42f0204  CMakeLists.txt.user.5d2be88  CMakeSettings.json  Config.cmake.in
LogModule/.cmake/api/v1/reply/: cache-v2-3f1eef6da02db08f2902.json  cmakeFiles-v1-a9832378dd8de5f4aed5.json  codemodel-v2-3947b26648904d863933.json  index-2024-01-30T12-07-59-0672.json  target-CppLogModule-Debug-dfcd212d6bf3cdfa8f37.json
LogModule/LogModule/: CMakeLists.txt  LogAPI.cpp  LogAPI.h  LogAPI_global.h  Makefile  cmake_install.cmake
LogModule/LogModule/include/: LogModule.h
LogModule/LogModule/src/: LogModule.cpp
LogModule/Tests/: CMakeLists.txt
LogModule/Tests/src/: LogModule_Test.cpp
build-LogModule-Desktop_Qt_5_15_2_MinGW_32_bit-Debug/: CMakeCache.txt  CMakeCache.txt.prev  CppLogModuleConfig.cmake  CppLogModuleTargets.cmake  build.ninja  cmake_install.cmake
build-LogModule-Desktop_Qt_5_15_2_MinGW_32_bit-Debug/.cmake/api/v1/reply/: cache-v2-fe07ae458fbf9ec6ea9d.json  cmakeFiles-v1-9916f8b7d45108133f3d.json  codemodel-v2-59c245dd50d2493d2214.json  directory-.-Debug-f22838f6dee907613bd5.json  directory-LogModule-Debug-e89b68714d023814ff12.json  index-2024-03-05T08-06-27-0923.json  target-CppLogModule-Debug-4025f08ba8d7cc2aba7f.json
build-LogModule-Desktop_Qt_5_15_2_MinGW_32_bit-Debug/.qtc_clangd/: compile_commands.json
build-LogModule-Desktop_Qt_5_15_2_MinGW_32_bit-Debug/LogModule/: cmake_install.cmake
